# umbra

./: .gdbinit  .gitignore  .gitmodules  CMakeLists.txt  README.md  Umbra.CPP.props  Umbra.props  WORKSPACE  deps.cmake  experiment-ecs-printer.py  gen.cpp  imgui.ini  msbuild.binlog  shadow-modules.cmake  umbra.sln
projs/experiments/ecs/: CMakeLists.txt
projs/experiments/ecs/src/: ecs.exp.h  main.cpp
projs/experiments/ecs/tests/: span_dynamic.test.cpp
projs/imgui/: CMakeLists.txt
projs/shadow/: CMakeLists.txt  README.md
projs/shadow-engine/: BUILD.bazel  shadow-engine.cpp  shadow-engine.vcxproj  shadow-engine.vcxproj.filters
projs/shadow-engine/src/core/: ShadowApplication.cpp  ShadowApplication.h  Time.cpp
projs/shadow/shadow-editor/: CMakeLists.txt
projs/shadow/shadow-editor/inc/: EditorModule.h  EditorWidget.h  EditorWindow.h  SceneView.h
projs/shadow/shadow-editor/inc/windows/: DebugWindows.h  SceneView.h
projs/shadow/shadow-editor/src/: EditorModule.cpp  EditorWidget.cpp  EditorWindow.cpp  SceneView.cpp  main.cpp
projs/shadow/shadow-editor/src/windows/: DebugWindows.cpp  SceneView.cpp
projs/shadow/shadow-editor/vlkx-resources/shader/: compileShaders.bat
projs/shadow/shadow-engine/: BUILD.bazel  CMakeLists.txt  README.md
projs/shadow/shadow-engine/assets/: CMakeLists.txt
projs/shadow/shadow-engine/assets/cmake/: CatchAddTests.cmake
projs/shadow/shadow-engine/assets/inc/: Mesh.h
projs/shadow/shadow-engine/assets/src/: Mesh.cpp  SFFElement.cpp  SFFParser.cpp  SFFVersion.h  SFFWriter.cpp  Shadow.FileFormat.ixx
projs/shadow/shadow-engine/assets/test/: Catch2Test.cpp  test.ocpp
projs/shadow/shadow-engine/core/: CMakeLists.txt
projs/shadow/shadow-engine/core/gdb/: PathIdPrinter.py
projs/shadow/shadow-engine/core/inc/: assers.h  exports.h
projs/shadow/shadow-engine/core/src/: compilation-test.cpp
projs/shadow/shadow-engine/core/tests/: PathID.test.cpp
projs/shadow/shadow-engine/entity/: CMakeLists.txt
projs/shadow/shadow-engine/entity/src/: EntitySystem.cpp  NodeManager.cpp  SystemManager.cpp
projs/shadow/shadow-engine/entity/tests/: NodeContainer.test.cpp  managers.test.cpp
projs/shadow/shadow-engine/inc/core/: Module.h  ModuleManager.h  SDL2Module.h  ShadowApplication.h  ShadowWindow.h
projs/shadow/shadow-engine/inc/debug/: DebugModule.h
projs/shadow/shadow-engine/math/src/: Transform.cpp
projs/shadow/shadow-engine/reflection/src/: Assembly.cpp  Reflection.cpp  Runtime.cpp  SHObject.cpp  assembly.cpp  native_loading.cpp  reflection.cpp  runtime.cpp
projs/shadow/shadow-engine/renderer/: CMakeLists.txt  README.md
projs/shadow/shadow-engine/renderer/base/: CMakeLists.txt
projs/shadow/shadow-engine/shadow-assets/: CMakeLists.txt
projs/shadow/shadow-engine/shadow-assets/inc/: Mesh.h
projs/shadow/shadow-engine/shadow-assets/src/: Mesh.cpp
projs/shadow/shadow-engine/shadow-entity/Entities/: Player.h
projs/shadow/shadow-engine/shadow-entity/inc/: Entity.h  EntityBase.h  EntityContainer.h  EntityManager.h  EntityRegistry.h  EntitySystem.h  NodeContainer.h  NodeManager.h  Scene.h  SceneEntity.h  SystemManager.h  TransformEntity.h
projs/shadow/shadow-engine/shadow-entity/src/: DefaultEntities.cpp  Entity.cpp  EntityManager.cpp  EntityRegistry.cpp  EntitySystem.cpp  NodeManager.cpp  Scene.cpp  SceneEntity.cpp  SystemManager.cpp  TransformEntity.cpp  shadow-entity.cpp
projs/shadow/shadow-engine/shadow-file-format/: CMakeLists.txt  SFFElement.natvis
projs/shadow/shadow-engine/shadow-file-format/cmake/: Catch.cmake  CatchAddTests.cmake
projs/shadow/shadow-engine/shadow-file-format/src/: SFFElement.cpp  SFFElement.h  SFFParser.cpp  SFFParser.h  SFFVersion.h  SFFWriter.cpp  SFFWriter.h  Shadow.FileFormat.ixx
projs/shadow/shadow-engine/shadow-file-format/test/: Catch2Test.cpp  sff_writer_tests.ocpp
projs/shadow/shadow-engine/shadow-math/inc/: Transform.h  dxmath.h
projs/shadow/shadow-engine/shadow-math/src/: Transform.cpp
projs/shadow/shadow-engine/shadow-reflection/inc/: SHObject.h  reflection.h
projs/shadow/shadow-engine/shadow-reflection/src/: SHObject.cpp  reflection.cpp
projs/shadow/shadow-engine/shadow-utility/inc/: string-helpers.h
projs/shadow/shadow-engine/shadow-utility/src/: File.cpp  hash.cpp  string-helpers.cpp
projs/shadow/shadow-engine/src/core/: Module.cpp  Module.h  ModuleManager.cpp  ModuleManager.h  SDL2Module.cpp  ShadowApplication.cpp  ShadowApplication.h  ShadowWindow.cpp  ShadowWindow.h  Time.cpp  Time.h
projs/shadow/shadow-engine/src/debug/: DebugModule.cpp
projs/shadow/shadow-engine/tests/: CMakeLists.txt  test.main.cpp
projs/shadow/shadow-engine/utility/: README.md
projs/shadow/shadow-engine/utility/src/: File.cpp  UUID.cpp  (+2 more)
projs/shadow/shadow-file-format/: BUILD  CMakeLists.txt
projs/shadow/shadow-file-format/cmake/: Catch.cmake
projs/shadow/shadow-file-format/src/: SFFParser.cpp  SFFWriter.h
projs/shadow/shadow-file-format/test/: Catch2Test.cpp  test.ocpp
projs/shadow/shadow-header-tool/: CMakeLists.txt  shadow-header-tool.csproj  shadow-header-tool.sln
projs/shadow/shadow-header-tool/.run/: shadow-editor.run.xml  shadow-header-tool shadow-engine.run.xml  shadow-header-tool test-game.run.xml  shadow-header-tool.run.xml
projs/shadow/shadow-header-tool/src/: DepsCommand.cs  GenerateCommand.cs  GenerateV2Command.cs  Program.cs  app.cs
projs/shadow/shadow-reflection/: BUILD.bazel  CMakeLists.txt
projs/shadow/shadow-renderer/: BUILD.bazel  CMakeLists.txt
projs/shadow/shadow-runtime/: BUILD.bazel  CMakeLists.txt
projs/shadow/shadow-runtime/src/: main.cpp
projs/shadow/shadow-utility/: BUILD  CMakeLists.txt
projs/shadow/test-game/: BUILD.bazel
projs/shadow/test-game/src/: game_main.cpp
projs/test-game/: CMakeLists.txt
projs/test-game/inc/: GameModule.h  TestModule.h  TestScene.h
projs/test-game/inc/entities/: Health.h  Player.h  TestCamera.h
projs/test-game/resources/pkg/: 01 - Copy.vxp  01.vxp
projs/test-game/src/: GameModule.cpp  TestModule.cpp  TestScene.cpp  entry.cpp
projs/test-game/src/entities/: Health.cpp  Player.cpp  TestCamera.cpp
(+499 files in other folders)
