

cc_library(
    name = "shadow-engine",
    srcs = glob(["src/**/*.cpp", "src/**/*.h"]),
    hdrs = glob(["src/**/*.h"]),
    strip_include_prefix = "src/",
    includes = [],
    copts = [
        "/std:c++20"
    ],
    deps = [
        "//projs/shadow-utility",
        "@sdl2"
    ],
    visibility = ["//visibility:public"],
)