

cc_library(
    name = "shadow-engine",
    srcs = glob(["src/**/*.cpp", "src/**/*.h"]),
    hdrs = glob(["src/**/*.h"]),
    strip_include_prefix = "src/",
    includes = [],
    copts = [
        "/std:c++20"
    ],
    deps = [
        "//projs/shadow/shadow-utility",
        "//projs/shadow/shadow-reflection",
        "@sdl2"
    ],
    visibility = ["//visibility:public"],
)