

cc_library(
    name = "shadow-reflection",
    srcs = glob(["src/**/*.cpp", "src/**/*.h"]),
    hdrs = glob(["src/**/*.h"]),
    strip_include_prefix = "src/",
    includes = [],
    copts = [
        "/std:c++20"
    ],
    deps = [
        "//projs/shadow/shadow-utility"
    ],
    visibility = ["//visibility:public"],
)