
cc_library(
    name = "shadow-renderer",
    srcs = glob(["src/**/*.cpp", "inc/**/*.h"]),
    hdrs = glob(["inc/**/*.h"]),
    strip_include_prefix = "inc/",
    includes = [],
    copts = [
        "/std:c++20"
    ],
    deps = [
        "@rules_vulkan//vulkan:vulkan_cc_library",
        "@sdl2",
        "@glm"
    ],
    visibility = ["//visibility:public"],
)