load("//projs/bazel-helpers:windows_dll_library.bzl", "windows_dll_library")


# cc_library(
#     name = "test-game-lib",
#     srcs = glob(["src/**/*.cpp", "src/**/*.h"]),
#     includes = [],
#     copts = [
#         "/std:c++20",
#         "/DCOMPILING_DLL"
#     ],
#     deps = [
#         "//projs/shadow/shadow-engine"
#     ],
#     linkstatic = False,
# )

windows_dll_library(
  name = "test-game",
  srcs = glob(["src/**/*.cpp", "src/**/*.h"]),
  hdrs = glob(["src/**/*.h"]),
  # Define COMPILING_DLL to export symbols during compiling the DLL.
  copts = ["/DCOMPILING_DLL"],

)

filegroup(
    name = "asd",
    srcs = [],
    data = [
        ":test-game",
        "//projs/shadow/shadow-runtime"
    ]
)