load("//projs/bazel-helpers:windows_dll_library.bzl", "windows_dll_library")
load("//projs/bazel-helpers:shadow-game.bzl","shadow_game")

# cc_library(
#     name = "test-game-lib",
#     srcs = glob(["src/**/*.cpp", "src/**/*.h"]),
#     includes = [],
#     copts = [
#         "/std:c++20",
#         "/DCOMPILING_DLL"
#     ],
#     deps = [
#         "//projs/shadow/shadow-engine"
#     ],
#     linkstatic = False,
# )


shadow_game(
  name = "test-game",
  srcs = glob(["src/**/*.cpp", "src/**/*.h"]),
  hdrs = glob(["src/**/*.h"]),
  # Define COMPILING_DLL to export symbols during compiling the DLL.
  copts = ["/DCOMPILING_DLL"],
)
  